--- a/index.html
+++ b/index.html
@@ -527,7 +527,7 @@
           ></div>
         </div>
         <i
-          class="bi bi-stop-circle-fill text-[25px] text-[#fff] stop-flag stop-btn cursor-pointer hover:text-[#80c343]"
+          class="bi bi-stop-circle-fill text-[25px] text-[#fff] stop-flag stop-btn cursor-pointer hover:text-[#80c343] hidden md:flex"
           id="stop"
         ></i>
       </div>
@@ -888,7 +888,7 @@
             class="w-full opacity-[0.5] absolute"
           />
           <div
-            class="offer1-text absolute w-full h-[40%] top-[50%] translate-y-[-50%] text-center"
+            class="offer1-text absolute w-full md:h-[50%] h-[70%] top-[50%] translate-y-[-50%] text-center"
           >
             <h3
               class="text-[20px] sm:text-[24px] md:text-[28px] text-[#222] font-[600]"
